# safeVision

./: README.md  Untitled38.ipynb  frame_extraction.ipynb  main.py  pyproject.toml
frontend/css/: accountSettings.css  admin_header.css  admin_side_menu.css  camera_management.css  dashboard.css  detection.css  header.css  login.css  register_contact.css  sideMenu.css  userManagment.css  verify.css  verify_incident_detail.css
frontend/html/: account_settings.html  admin_side_menu.html  camera_management.html  dashboard.html  detection.html  login.html  profile.html  register_contact.html  sideMenu.html  userManagement .html  userManagement.html  verify.html  verify_incident.html
frontend/js/: account_settings.js  active_menu.js  admin_sidebar_loder.js  auth_guard.js  camera_management.js  contact_registration.js  dashboard_api.js  detection.js  header.js  incidents.js  login.js  mapleaflet.js  role_based_dashboard.js  sideMenu_loader.js  sideMenu_loder.js  sidebar_toggle.js  upload_video.js  userManagement.js  verify_incident_detail.js  verify_incidents.js
safeVision/core/: database.py
safeVision/routers/: registerUser.py
safeVision/schema/: register.py
safeVision_Backend/: main.py
safeVision_Backend/accident_detection_model/: accident_detection_final.keras
safeVision_Backend/core/: config.py  detection_config.py  email.py  psql_db.py  security.py
safeVision_Backend/models/: table_creation.py
safeVision_Backend/repositories/: accident_repo.py  admin_management_repo.py  admin_profile_repo.py  admin_registration_repo.py  alert_repo.py  dashboard_repo.py  (+4 more)
(+19 files in other folders)
